# vaccel

./: .clang-format  .clang-tidy  .contributors.yaml  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTING.md  LICENSE  MAINTAINERS  NOTICE  README.fpga.md  README.md  meson.build  meson.options  vaccel.pc.in
examples/: CMakeLists.txt  classification.c  classification_generic.c  classify.c  classify_generic.c  common.h  depth.c  depth_generic.c  detect.c  detect_generic.c  exec.c  exec_generic.c  exec_helpers.c  exec_helpers_nonser.c  exec_serialized.c  exec_with_res.c  exec_with_resource.c  fpga_test.c  full_torch_classification.cpp  genop.c  local_and_virtio.c  mbench.c  meson.build  minmax.c  minmax_generic.c  mytestlib.c  noop.c  pose.c  pose_generic.c  pynq_array_copy.c  pynq_array_copy_generic.c  pynq_parallel.c  pynq_parallel_generic.c  pynq_vector_add.c  pynq_vector_add_generic.c  segment.c  segment_generic.c  sgemm.c  sgemm_generic.c  single_model.c  (+6 more)
examples/common/: inference_helpers.c  inference_helpers.h  meson.build  mydata.c  mydata.h
examples/fpga_examples/: array_copy.c  parallel.c  vector_add.c
examples/input/: input_2048.csv  input_262144.csv
examples/models/tf/: lstm2.tflite
examples/models/torch/: cnn_trace.pt
plugins/: CMakeLists.txt  meson.build
plugins/exec/: CMakeLists.txt  meson.build  vaccel.c
plugins/fpga/: CMakeLists.txt  sample_common.h  vaccel.c
plugins/google_coral/: CMakeLists.txt  operations.cpp  operations.h  vaccel.cpp
plugins/jetson_inference/: CMakeLists.txt  operations.cpp  operations.h  util.cpp  util.h  vaccel.cpp
plugins/mbench/: CMakeLists.txt  meson.build  vaccel.c
plugins/noop/: CMakeLists.txt  meson.build  vaccel.c
plugins/virtio/: CMakeLists.txt  ioctl.c  ioctl.h  operations.c  operations.h  session.c  session.h  vaccel.c
plugins/vsock/: Cargo.toml  build.rs  wrapper.h
plugins/vsock/src/: client.rs  glue.c  image.rs  lib.rs  resources.rs  session.rs  tf_model.rs  util.rs  vaccel.rs
python/: CMakeLists.txt  helper.c  meson.build  vaccel-python.pc.in
src/: CMakeLists.txt  arg.c  arg.h  arg_deprecated.c  backend.c  backend.h  blob.c  blob.h  common.h  config.c  config.h  core.h  error.h  file.c  file.h  id_pool.c  id_pool.h  list.h  log.c  log.h  meson.build  misc.c  misc.h  op.h  plugin.c  plugin.h  prof.c  prof.h  prof_backend.c  prof_backend.h  prof_base.c  resource.c  resource.h  resource_registration.c  resource_registration.h  resources.c  resources.h  session.c  session.h  utils.c  (+8 more)
src/include/: error.h  file.h  list.h  log.h  meson.build  misc.h  plugin.h  resource.h  resources.h  session.h  tf_model.h  vaccel.h  vaccel.h.in  vaccel_args.h  vaccel_file.h  vaccel_id.h  vaccel_prof.h
src/include/ops/: blas.h  exec.h  fpga.h  genop.h  image.h  minmax.h  noop.h  opencv.h  tf.h  tflite.h  torch.h  vaccel_ops.h
src/include/resources/: shared_object.h  single_model.h  tf_model.h  tf_saved_model.h  torch_saved_model.h
src/include/vaccel/: arg.h  blob.h  config.h  core.h  error.h  id.h  list.h  log.h  misc.h  op.h  plugin.h  prof.h  prof_backend.h  resource.h  session.h
src/include/version/: generateGitVersionHeader.cmake  git_version.h.in
src/ml/: caffe.c  caffe.h  ml_ops.c  ml_ops.h  model.c  model.h
src/ops/: blas.c  blas.h  exec.c  exec.h  fpga.c  fpga.h  genop.c  genop.h  image.c  image.h  meson.build  minmax.c  minmax.h  noop.c  noop.h  opencv.c  opencv.h  tf.c  tf.h  tflite.c  tflite.h  torch.c  torch.h  vaccel_ops.h
src/plugins/: CMakeLists.txt
src/plugins/jetson_inference/: CMakeLists.txt  util.h
src/plugins/noop/: CMakeLists.txt  vaccel.c
src/plugins/virtio/: CMakeLists.txt  operations.c  (+2 more)
src/profiling/: meson.build  vaccel_prof.c  vaccel_prof.h
src/resources/: file.c  file.h  meson.build  shared_object.c  shared_object.h  single_model.c  single_model.h  tf_model.c  tf_model.h  tf_saved_model.c  tf_saved_model.h  torch_saved_model.c  torch_saved_model.h
src/utils/: enum.h  fs.c  fs.h  meson.build  net.c  net.h  path.c  path.h  str.c  str.h
test/: .clang-tidy  CMakeLists.txt  coverage.patch  main.cpp  meson.build  mock_virtio.cpp  mock_virtio.hpp  test.cpp  test_backend.cpp  test_blas.cpp  test_classify.cpp  test_example.cpp  test_exec.cpp  test_fpga.cpp  test_id_pool.cpp  test_image.cpp  test_log.cpp  test_minmax.cpp  test_misc.cpp  test_noop.cpp  test_plugin.cpp  test_resource.cpp  test_session.cpp  test_template.cpp  test_tf_interference.cpp  test_tf_model.cpp  test_tf_saved_model.cpp  test_vaccel.cpp  utils.cpp  utils.hpp.in
test/catch2/: .clang-tidy
test/core/: meson.build  test_arg.cpp  test_blob.cpp  test_bootstrap_shutdown.cpp  test_config.cpp  test_core.cpp  test_file.cpp  test_id_pool.cpp  test_log.cpp  test_misc.cpp  test_misc_mock.cpp  test_plugin.cpp  test_resource.cpp  test_resource_registration.cpp  test_session.cpp  test_utils_fs.cpp  test_utils_net_curl.cpp  test_utils_net_nocurl.cpp  test_utils_path.cpp  test_vaccel.cpp
test/docs/: README.md  coverage.md  coverage.patch  faq.md  mocking_functions.md  research.md  running_tests.md  test_runner.md  writing_tests.md
test/fff/: .clang-tidy
test/op/: meson.build  test_arg_helpers.cpp  test_blas.cpp  test_exec.cpp  test_fpga.cpp  test_image.cpp  test_image_generic.cpp  test_minmax.cpp  test_noop.cpp  test_single_model.cpp  test_tf_inference.cpp  test_tf_interference.cpp  test_tf_model.cpp  test_tf_saved_model.cpp  test_tflite_inference.cpp
test/ops/: meson.build  test_arg_helpers.cpp  test_blas.cpp  test_exec.cpp  test_fpga.cpp  test_image.cpp  test_image_generic.cpp  test_minmax.cpp  test_noop.cpp  test_tf.cpp  test_tf_inference.cpp  test_tflite.cpp  test_tflite_inference.cpp  test_torch.cpp
test/resources/: meson.build  test_single_model.cpp  test_tf_saved_model.cpp
test/unit/: test_bootstrap_shutdown.cpp  test_id_pool.cpp  test_log.cpp  test_misc.cpp  test_misc_mock.cpp  test_plugin.cpp  test_resource.cpp  test_session.cpp  test_vaccel.cpp
test/utils/: meson.build  test_fs.cpp  test_net_curl.cpp  test_net_nocurl.cpp  test_path.cpp  test_str.cpp
version/: CMakeLists.txt
(+128 files in other folders)
