option('plugin-noop',
  type : 'feature',
  value : 'auto',
  description : 'Build the no-op debugging plugin')

option('plugin-exec',
  type : 'feature',
  value : 'auto',
  description : 'Build the exec plugin')

option('plugin-mbench',
  type : 'feature',
  value : 'auto',
  description : 'Build the mbench plugin')

option('plugins',
  type : 'feature',
  value : 'disabled',
  description : 'Build all the plugins')

option('examples',
  type : 'feature',
  value : 'auto',
  description : 'Build the examples')

option('tests',
  type : 'feature',
  value : 'auto',
  description : 'Enable testing')
